- Flexible UI with fragments in displayMessageActivity

--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -1,9 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="?attr/actionBarSize"
-    tools:context="com.simplea.jonnylee.myfirstapp.DisplayMessageActivity">
+    tools:context="com.simplea.jonnylee.myfirstapp.DisplayMessageActivity"
+    android:id="@+id/fragment_container">
 
     <TextView
         android:layout_height="wrap_content"
@@ -11,4 +12,4 @@
         android:id="@+id/view_message"
         />
 
-</LinearLayout>
+</FrameLayout>
