--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,12 @@
         android:text="@string/button_send"
         android:onClick="sendMessage"/>
 
+    <fragment
+        android:name="com.simplea.jonnylee.myfirstapp.ArticleFragment"
+        android:id="@+id/fragment_article"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"/>
+
 
 
 
